--- a/day-1/Cargo.toml
+++ b/day-1/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
 name = "day-1"
 version = "0.1.0"
+edition = "2021"
 
 [[bin]]
 name = "part-1"
-path = "bin/part-1.rs"
+path = "src/part-1.rs"
+
+[[bin]]
+name = "part-2"
+path = "src/part-2.rs"
+
+[dependencies]
+common = { path = "../common" }
