--- a/scripts/Cargo.toml
+++ b/scripts/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-glob = "0.3.0"
+toml = "0.4.2"
+regex = "1"
+serde = "1.0.147"
+serde_derive = "1.0.147"
 common = { path = "../common" }
 
 [[bin]]
