--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,7 @@
 [workspace]
-
 members = [
-    "common", 
-    "scripts",
-    "day-1",
-    "day-2",
+    'common',
+    'scripts',
+    'day-1',
+    'day-2',
 ]
